# personaplex-desktop

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  app.html  fix-and-start.sh  index.html  package-lock.json  package.json  setup-wsl.sh  start-app.bat  start-server.bat
.claude/: SESSION_SUMMARY_2026-01-30.md
personaplex_server/: main.py  requirements.txt  test_client.py  test_voice.py  voices.json
personaplex_server/src/server/: main.py
src/: App.jsx  audio-processor.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
